--- a/src/app/global.css
+++ b/src/app/global.css
@@ -6,7 +6,7 @@
 
 html {
   min-height: 100dvh;
-  min-width: 100dvw;
+  min-width: 100%;
 }
 
 body {
@@ -15,5 +15,5 @@ body {
   background-color: #E9E9E9;
   font-family: var(--font-figtree);
   box-sizing: border-box;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
