hotfix: fixing styles

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -12,7 +12,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  background-color: #E9E9E9;
+  background-color: #F9F9F9;
   font-family: var(--font-figtree);
   box-sizing: border-box;
   overflow-x: hidden;
